# cvx-optimization-to-ml

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
include/: rotate.hpp
src/: main.cpp  rotate.cpp
